# react-native-pinned-ws

./: .eslintrc.js  .gitignore  LICENSE  README.md  babel.config.js  codegen.json  jest.config.js  jest.setup.js  package-lock.json  package.json  react-native-pinned-ws.podspec  react-native-ssl-websocket.podspec  tsconfig.build.json  tsconfig.json  tsconfig.types.json
.github/workflows/: npm-publish.yml
__tests__/: basic.test.ts  integration.test.ts  validation.test.ts
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/java/com/sslwebsocket/: NativeSSLWebSocketSpec.java  SSLPinningSocketFactory.java  SSLPinningTrustManager.java  SSLWebSocketConnection.java  SSLWebSocketModule.java  SSLWebSocketPackage.java  SSLWebSocketSpec.java  SSLWebSocketTurboPackage.java
android/src/newarch/com/sslwebsocket/: SSLWebSocketTurboModule.java
ios/: NativeSSLWebSocketSpec.h  SSLWebSocketConnection.h  SSLWebSocketConnection.m  SSLWebSocketConnection.mm  SSLWebSocketModule.h  SSLWebSocketModule.m  SSLWebSocketModule.mm  SSLWebSocketSpec.h
src/: NativeSSLWebSocket.ts  NativeSSLWebSocketSpec.ts  SSLWebSocket.ts  index.ts  types.ts
